; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_iso.c_iso_connect.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_iso.c_iso_connect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@False = common dso_local global i32 0, align 4
@ISO_PDU_CC = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [23 x i8] c"expected CC, got 0x%x\0A\00", align 1
@True = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @iso_connect(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 0, i64* %8, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @tcp_connect(i32* %9, i8* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %15, label %13

13:                                               ; preds = %3
  %14 = load i32, i32* @False, align 4
  store i32 %14, i32* %4, align 4
  br label %40

15:                                               ; preds = %3
  %16 = load i32*, i32** %5, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = call i32 @iso_send_connection_request(i32* %16, i8* %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %22, label %20

20:                                               ; preds = %15
  %21 = load i32, i32* @False, align 4
  store i32 %21, i32* %4, align 4
  br label %40

22:                                               ; preds = %15
  %23 = load i32*, i32** %5, align 8
  %24 = call i32* @iso_recv_msg(i32* %23, i64* %8, i32* null)
  %25 = icmp eq i32* %24, null
  br i1 %25, label %26, label %28

26:                                               ; preds = %22
  %27 = load i32, i32* @False, align 4
  store i32 %27, i32* %4, align 4
  br label %40

28:                                               ; preds = %22
  %29 = load i64, i64* %8, align 8
  %30 = load i64, i64* @ISO_PDU_CC, align 8
  %31 = icmp ne i64 %29, %30
  br i1 %31, label %32, label %38

32:                                               ; preds = %28
  %33 = load i64, i64* %8, align 8
  %34 = call i32 @error(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i64 %33)
  %35 = load i32*, i32** %5, align 8
  %36 = call i32 @tcp_disconnect(i32* %35)
  %37 = load i32, i32* @False, align 4
  store i32 %37, i32* %4, align 4
  br label %40

38:                                               ; preds = %28
  %39 = load i32, i32* @True, align 4
  store i32 %39, i32* %4, align 4
  br label %40

40:                                               ; preds = %38, %32, %26, %20, %13
  %41 = load i32, i32* %4, align 4
  ret i32 %41
}

declare dso_local i32 @tcp_connect(i32*, i8*) #1

declare dso_local i32 @iso_send_connection_request(i32*, i8*) #1

declare dso_local i32* @iso_recv_msg(i32*, i64*, i32*) #1

declare dso_local i32 @error(i8*, i64) #1

declare dso_local i32 @tcp_disconnect(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
